Java viewer: Support Java 9 and later
- Replace invocations of newInstance() in JSch with
  getConstructor().newInstance() (silences deprecation warnings when
  building under JDK 9+.)
- Explicitly type cast invocations of [java.nio.]Buffer.flip(),
  Buffer.clear(), and Buffer.position() (fixes NoSuchMethodErrors when
  building under JDK 9+ and running under Java 8, since Java 9+ provides
  ByteBuffer.flip(), ByteBuffer.clear(), and ByteBuffer.position() but
  previous versions don't.)
- Mac: Don't use sun.nio.ch.PollSelectorProvider unless running under
  Java 8 and earlier (fixes ClassNotFoundException when running under
  Java 9+.)
- Replace invocations of Integer constructor with Integer.valueOf()
  (silences deprecation warnings when building under JDK 9+.)
- Use InputEvent.*_DOWN_MASK instead of Event.*_MASK, and
  getModifiersEx() instead of getModifiers() (silences deprecation
  warnings when building under JDK 9+.)
- When running under Java 9+, use the new Desktop/Taskbar methods that
  replace equivalent methods in the (now deprecated) com.apple.eawt.*
  classes.
- Set the "Button.showMnemonics" UIManager property on Windows rather
  than directly invoking
  com.sun.java.swing.plaf.windows.WindowsLookAndFeel.setMnemonicHidden()
  (for the purpose of showing the shortcut key mnemonics in the F8 popup
  menu), because as of Java 10, the WindowsLookAndFeel class is no
  longer accessible at compile time when using a non-Windows JDK, and
  attempting to access it at run time using Reflect causes an "illegal
  reflective access."
- The Oracle Java TurboVNC Viewer app bundle for OS X no longer passes
  -d64 to the JRE.  Java 9+ no longer supports this switch, since a
  32-bit JRE is no longer available, and AFAICT, -d64 was never
  necessary with Oracle Java for OS X anyhow, since that implementation
  was always 64-bit-only.
- The Un*x vncviewer script no longer passes -d64 to the JRE when
  launching a 64-bit build of the TurboVNC Viewer.  Java 9+ no longer
 